[tool.poetry]
name = "mesonet-inventory"
version = "0.1.0"
description = "No Code Database for Managing Mesonet-in-a-Box Deployments and Inventory"
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mesonet_inventory"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
